switch to display:none for hiding preloader

--- a/Video/styles.css
+++ b/Video/styles.css
@@ -196,7 +196,8 @@ Video
 }
 .hide-preloader {
   z-index: -999;
-  visibility: hidden;
+  /* visibility: hidden; */
+  display: none;
 }
 
 header {
